--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "lightbox2": "^2.11.4",
         "vue": "^3.4.19",
         "vue-router": "^4.2.5"
     }
