--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "lightbox2": "^2.11.4",
+        "swiper": "^11.0.7",
         "vue": "^3.4.19",
         "vue-router": "^4.2.5"
     }
