--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "mcamara/laravel-localization": "^1.8"
+        "mcamara/laravel-localization": "^1.8",
+        "whitecube/laravel-cookie-consent": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
