--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "glightbox": "^3.3.0",
         "lightbox2": "^2.11.4",
         "swiper": "^11.0.7",
         "vue": "^3.4.19",
